# simulador-memoria

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
.github/workflows/: build_and_release.yaml  rust-ci.yml
scripts/: build.ts
src/: App.tsx  index.css  main.js
src/utils/: pageReplachement.d.ts  pageReplachement.js  pageReplachement.ts
window/: Cargo.toml  build.rs
window/src/: main.rs
