[package]
name = "window"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
wry = "0.40"
tao = "0.28"
rust-embed = "8.4"
mime_guess = "2.0"
image = "0.24"

[build-dependencies]
embed-resource = "2.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
