[package]
name = "window"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
image = "0.25.9"
mime_guess = "2.0.5"
rust-embed = "8.11.0"
tao = "0.34.5"
wry = { version = "0.54.1", features = ["protocol"] }

[build-dependencies]
embed-resource = "3.0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
